<resources>
    <string name="app_name">BaoAccount</string>
    <!--首页-->
    <string name="mine">我的</string>
    <string name="home">首页</string>
    <string name="account">账单</string>
    <string name="calculator">记一笔</string>

    <!--登录-->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="userName">用户名:</string>
    <string name="passWord">密码:</string>
    <string name="email">邮箱：</string>
    <string name="account_out">支出</string>
    <string name="account_in">收入</string>
    <string name="suggestion">理财小贴士</string>
    <string name="finish">完成</string>
    <string name="title_activity_app_main">app_main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!--我的-->
    <string name="family">家庭：</string>
    <string name="m_family">我的家</string>
    <string name="budget">预算</string>
    <string name="account_type">账户</string>
    <string name="setting">个人设置</string>
    <string name="sign_out">注销</string>

    <!--记一笔-->
    <string name="money">金额</string>
    <string name="type">消费类型</string>
    <string name="direction">消费方向</string>
    <string name="myaccount">账户</string>

    <!--查看账单-->
    <string name="person">个人</string>
    <string name="MyFamily">家庭</string>
    <string name="user">用户</string>

    <string name="type_Flow">支出类型</string>
    <string name="commit">账户</string>
    <string name="Flow_money">金额</string>
    <string name="in_money">0.00</string>

    <!--主页面-->
    <string name="sum_in">今日总收入</string>
    <string name="sum_out">今日总支出</string>

    <!--设置-->
    <string name="mima">设置密码</string>
    <string name="xinxi">设置个人信息</string>
    <string name="origin">当前登录密码：</string>
    <string name="new_mima">修改新密码：</string>
    <string name="queren_mima">确认新密码：</string>
    <string name="set_username">输入新用户名：</string>
    <string name="set_email">输入邮箱：</string>
    <string name="myhome">我的家</string>
    <string name="createhome">当前还没有进入家庭哦</string>
    <string name="createhome1">赶紧创建或加入家庭吧！</string>
    <string name="family_name">家庭名：</string>
    <string name="familymember">邀请成员(可不填）：</string>
</resources>
