<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/backgroundOrange"
    android:layout_margin="15dp">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/account_in"
        android:textColor="@color/textColorBlack"
        android:textSize="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <TextView
            android:text="@string/type"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:textColor="@color/textColorBlack"/>
        <TextView
            android:text="@string/account"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:textColor="@color/textColorBlack"/>
        <TextView
            android:text="@string/money"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:textColor="@color/textColorBlack"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>