<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="90dp">
        <Button
            android:id="@+id/person_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person"
            android:textSize="20dp"
            android:background="@color/mine_background_color"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp"/>

        <Button
            android:id="@+id/family_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MyFamily"
            android:background="@color/mine_background_color"
            android:textSize="20dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:layout_margin="15dp">
        <TextView
            android:id="@+id/account_out_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type_Flow"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColorOrange"/>
        <TextView
            android:id="@+id/account_out_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_horizontal"
            android:text="@string/commit"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/textColorOrange"/>
        <TextView
            android:id="@+id/account_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Flow_money"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/textColorOrange"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ListView
            android:id="@+id/account_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    
</LinearLayout>