<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundOrangeLight"
    tools:context=".ui.calculator.CalculatorFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/money"
            android:textSize="26dp"
            android:textColor="@color/textColorPink"
            android:layout_marginLeft="80dp"/>

        <EditText
            android:id="@+id/money"
            android:layout_width="129dp"
            android:layout_height="35dp"
            android:layout_marginLeft="60dp"
            android:background="@drawable/bg_edit_nomal"
            android:text="@string/in_money"
            android:gravity="center" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundOrange"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/textColorPink"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"/>

        <com.baoaccount.CustomRadioGroup
            android:layout_marginLeft="20dp"
            android:id="@+id/customRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundOrange"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direction"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColorPink"/>

        <com.baoaccount.CustomRadioGroup
            android:layout_marginLeft="50dp"
            android:id="@+id/customRadioGroup_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundOrange"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myaccount"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:textColor="@color/textColorPink"/>
        <com.baoaccount.CustomRadioGroup
            android:layout_marginLeft="50dp"
            android:id="@+id/customRadioGroup_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/c_finish"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:text="@string/finish"
        android:textSize="23dp"
        android:background="@color/backgroundOrange"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"/>



</LinearLayout>