<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/login_background"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="353dp"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat">

            <ImageView
                android:id="@+id/register_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_action_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/register"
                android:textColor="@color/textColorDarkOrange"
                android:textSize="24dp" />


        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/userName"
            android:textColor="@color/user_nameColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/user_set_name"
            android:layout_width="230dp"
            android:layout_marginLeft="20dp"

            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_nomal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/passWord"
            android:textColor="@color/user_nameColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/user_set_password"
            android:layout_width="230dp"
            android:layout_marginLeft="20dp"

            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_nomal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/email"
            android:textColor="@color/user_nameColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/user_set_email"
            android:layout_width="230dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_nomal"/>
    </LinearLayout>
    <Button
        android:id="@+id/set_finish"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backgroundOrange"
        android:text="@string/finish"
        android:textSize="24dp"
        android:layout_gravity="center"/>


</LinearLayout>