<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundOrangeLight"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/backgroundOrangeLight"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/home_create_back"
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_action_back"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/myhome"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="23sp"/>
        <ImageView
            android:id="@+id/home_create_finish"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@mipmap/finish"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createhome"
            android:textColor="@color/textColorPink"
            android:textAlignment="center"
            android:textSize="20sp"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/createhome1"
            android:textAlignment="center"
            android:textColor="@color/textColorPink"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/family_name"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginLeft="50dp"/>
            <EditText
                android:id="@+id/family_name"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/familymember"
                android:gravity="center"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/family_member"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="30dp">
            <Button
                android:id="@+id/join_family"
                android:layout_marginRight="30dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="加入家庭"
                android:background="@color/backgroundOrange"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/create_family"
                android:layout_marginLeft="30dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/backgroundOrange"
                android:text="创建家庭"
                android:textSize="18sp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>